# fundamentally-absurd

./: .gitignore  Cargo.toml  guidebook.md
shaders/: finalize.comp  randomize.comp  simulate.comp
src/: app.rs  dispatch_manager.rs  init.rs  main.rs  options.rs  presenter.rs  renderer.rs  shaders.rs  stats.rs
