[package]
name = "matrix-3"
version = "0.1.0"
authors = ["Code_Cube <therealcodecube@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.2"
rand = "0.8.3"
vulkano = "0.22"
vulkano-shaders = "0.22"
vulkano-win = "0.22"
image = "0.22"
winit = "0.24"
time = "0.1.42"
